# dinosavi

./: .gitignore  README.md  dev.ipynb  pyproject.toml
dinosavi/: __init__.py  __main__.py  cache.py  eval_crw.py  eval_slot.py  train.py
dinosavi/cfg/: __init__.py  main.yaml
dinosavi/cfg/data/: base.yaml  davis.yaml  kinetics400.yaml  movi_c.yaml  movi_e.yaml
dinosavi/cfg/hparam/: slot-control.yaml  slot-s256d-bgfg.yaml  slot-s256d-final-line-ini5.yaml  slot-s256d-final-t0.yaml  slot-s256d-final.yaml  slot-s256d-ini5.yaml  slot-s256d-line-t01-tline.yaml  slot-s256d-sine.yaml  slot-s256d-t01-none.yaml  slot-s256d-t01-tline-ini3.yaml  slot-s256d-t02-tline-ini5.yaml  slot-s256d.yaml  slot-s512d.yaml  slot-s768d.yaml
dinosavi/cfg/hydra/: custom.yaml
dinosavi/cfg/mode/: cache.yaml  eval-slot.yaml  eval.yaml  help.yaml  slot-base.yaml  train-crw.yaml  train-slot.yaml
dinosavi/cfg/model/: crw-mem.yaml  crw.yaml  dinosaur.yaml  slot.yaml
dinosavi/data/: cache.py  common.py  davis.py  kinetics.py  movi.py  transform.py  vos.py
dinosavi/engine/: common.py  exp_runner.py  vos.py
dinosavi/models/: __init__.py  crw.py  dino_baseline.py  slot_model.py
dinosavi/models/encoders/: resnet.py  slot_attention.py  video_wrapper.py
dinosavi/models/heads/: cnn.py  fchead.py  slot_decoder.py
dinosavi/utils/: __init__.py  crw_utils.py  logging.py  model_hack.py  slot_utils.py
tests/: __init__.py  pipeline.py
video_cv_project/: __init__.py  __main__.py  cache.py  cfg.py  checkpointer.py  eval.py  eval_crw.py  eval_slot.py  train.py
video_cv_project/cfg/: __init__.py  main.yaml  train.yaml
video_cv_project/cfg/data/: base.yaml  davis.yaml  kinetics400.yaml  movi_c.yaml  movi_e.yaml
video_cv_project/cfg/hparam/: slot-control.yaml  slot-s128d.yaml  slot-s256d-extra.yaml  slot-s256d-final-ini5.yaml  slot-s256d-final-t1.yaml  slot-s256d-line-t01-tline-ini5.yaml  slot-s256d-line.yaml  slot-s256d-t0-tline.yaml  slot-s256d-t01-tline-ini5.yaml  slot-s256d-t01.yaml  (+6 more)
video_cv_project/data/: __init__.py  cache.py  common.py  davis.py  kinetics.py  movi.py  transform.py  vos.py
video_cv_project/engine/: __init__.py  checkpointer.py  common.py  exp_runner.py  trainer.py  vos.py
video_cv_project/models/: __init__.py  crw.py  dino_baseline.py  slot_model.py
video_cv_project/utils/: __init__.py  crw_utils.py  logging.py  misc.py  model_hack.py  pos_encode.py  slot_utils.py  viz.py
(+40 files in other folders)
