[tool.poetry]
name = "video-cv-project"
version = "0.1.0"
description = "Come up with name later"
authors = ["John-Henry Lim <42513874+Interpause@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "video_cv_project"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.21.2"
ipywidgets = "^8.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
